# virtools-shimmer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: TT_Gravity_RT.vcalltype  databasemanager.imp  gravity.imp  interfacemanager.imp  particlesystems.imp  physics.imp  toolbox.imp  vtable.map
patches/: CKMemoryPool.patch  CKScene.patch  Global.patch
scripts/: bblibpatcher.py  gen.py
src/: .gitignore  CMakeLists.txt  common.h  dllmain.cpp
src/nontrivial/: CKContext_nontrivial_impl.cpp  CKMemoryPool_nontrivial_impl.cpp  CKParameterManager_nontrivial_impl.cpp
src/trivial/: .gitignore
